<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="7dp"
        android:text="@string/main_title"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />

    <com.allen.library.SuperTextView
        android:id="@+id/app_language"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:onClick="onClick"
        app:sLeftTextColor="@color/window_hint_gray"
        app:sLeftTextString="@string/main_language"
        app:sRightTextColor="@color/edit_gray"
        app:sRightTextSize="11sp"
        app:sRightTextString="中文" />

    <com.allen.library.SuperTextView
        android:id="@+id/app_theme"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:onClick="onClick"
        app:sLeftTextColor="@color/window_hint_gray"
        app:sLeftTextString="@string/main_theme"
        app:sRightTextColor="@color/edit_gray"
        app:sRightTextSize="11sp"
        app:sRightTextString="极简白" />

    <com.allen.library.SuperTextView
        android:id="@+id/app_backstage"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:onClick="onClick"
        app:sLeftTextColor="@color/window_hint_gray"
        app:sLeftTextString="@string/main_service"
        app:sRightTextColor="@color/edit_gray"
        app:sRightTextSize="11sp"
        app:sRightTextString="已关闭" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="7dp"
        android:text="@string/data_title"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />

    <com.allen.library.SuperTextView
        android:id="@+id/app_current_record"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:onClick="onClick"
        app:sLeftTextColor="@color/window_hint_gray"
        app:sLeftTextString="@string/data_current_record"
        app:sRightTextColor="@color/edit_gray"
        app:sRightTextSize="11sp" />

    <com.allen.library.SuperTextView
        android:id="@+id/app_history_record"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:onClick="onClick"
        app:sLeftTextColor="@color/window_hint_gray"
        app:sLeftTextString="@string/data_history"
        app:sRightTextColor="@color/edit_gray"
        app:sRightTextSize="11sp" />

    <com.allen.library.SuperTextView
        android:id="@+id/app_delete_download"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:onClick="onClick"
        app:sLeftTextColor="@color/window_hint_gray"
        app:sLeftTextString="@string/data_delete_download"
        app:sRightTextColor="@color/edit_gray"
        app:sRightTextSize="11sp" />

    <com.allen.library.SuperTextView
        android:id="@+id/app_open_download"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:onClick="onClick"
        app:sLeftTextColor="@color/window_hint_gray"
        app:sLeftTextString="@string/data_download"
        app:sRightTextColor="@color/edit_gray"
        app:sRightTextSize="11sp" />

    <com.allen.library.SuperTextView
        android:id="@+id/app_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:onClick="onClick"
        app:sLeftTextColor="@color/window_hint_gray"
        app:sLeftTextString="@string/data_clear_cache"
        app:sRightTextColor="@color/edit_gray"
        app:sRightTextSize="11sp"
        app:sRightTextString="0.0M" />
</LinearLayout>